<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.inaconsultoria.imovies.ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_backdrop_path"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_background_toobar_height"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_background_toobar_height"
            android:background="@drawable/background_scroolling" />
    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/detail_space_around_card">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/detail_margim_top_poster"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="@dimen/border_radios_cards_and_images"
                            app:cardElevation="@dimen/detail_elevation_poster_card">

                            <ImageView
                                android:id="@+id/image_poster"
                                android:layout_width="@dimen/detail_poster_width"
                                android:layout_height="@dimen/detail_poster_heigth"
                                android:contentDescription="@string/app_description_image_poster"
                                android:scaleType="centerCrop"
                                android:transitionName="@string/app_image_poster"
                                tools:ignore="UnusedAttribute" />
                        </android.support.v7.widget.CardView>
                    </RelativeLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_margim_bottom_poster_deatils"
                        android:layout_marginTop="@dimen/detail_margim_top_card_details"
                        android:minHeight="@dimen/detail_min_heigth_card"
                        app:cardCornerRadius="@dimen/border_radios_cards_and_images"
                        app:cardElevation="@dimen/detail_elevation_poster_card">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/detail_margin_top_progress_loading"
                            android:visibility="gone" />

                        <LinearLayout
                            android:id="@+id/layout_infos_movie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/detail_space_around_card"
                            android:orientation="vertical">

                            <!--TITLE-->
                            <TextView
                                android:id="@+id/text_label_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_title"
                                android:textSize="@dimen/detail_size_text_titles" />

                            <TextView
                                android:id="@+id/text_content_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_no_register"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/detail_size_text_content"
                                android:textStyle="bold"
                                tools:text="Lorem Ipsum." />

                            <!--GENRES-->
                            <TextView
                                android:id="@+id/text_label_genres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/detail_margin_between_texts"
                                android:text="@string/app_genres"
                                android:textSize="@dimen/detail_size_text_titles" />

                            <TextView
                                android:id="@+id/text_content_genres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_no_register"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/detail_size_text_content"
                                android:textStyle="bold"
                                tools:text="Lorem Ipsum." />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <!--VOTE AVERAGE-->
                                    <TextView
                                        android:id="@+id/text_label_vote_average"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/detail_margin_between_texts"
                                        android:text="@string/app_vote_average"
                                        android:textSize="@dimen/detail_size_text_titles"
                                        tools:ignore="TooDeepLayout" />

                                    <TextView
                                        android:id="@+id/text_content_vote_average"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/app_no_register"
                                        android:textColor="@android:color/black"
                                        android:textSize="@dimen/detail_size_text_content"
                                        android:textStyle="bold"
                                        tools:text="Lorem Ipsum." />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <!--VOTE COUNT-->
                                    <TextView
                                        android:id="@+id/text_label_vote_count"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/detail_margin_between_texts"
                                        android:text="@string/app_vote_count"
                                        android:textSize="@dimen/detail_size_text_titles" />

                                    <TextView
                                        android:id="@+id/text_content_vote_count"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/app_no_register"
                                        android:textColor="@android:color/black"
                                        android:textSize="@dimen/detail_size_text_content"
                                        android:textStyle="bold"
                                        tools:text="Lorem Ipsum." />
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <!--RUNTIME-->
                                    <TextView
                                        android:id="@+id/text_label_runtime"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/detail_margin_between_texts"
                                        android:text="@string/app_runtime"
                                        android:textSize="@dimen/detail_size_text_titles" />

                                    <TextView
                                        android:id="@+id/text_content_runtime"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/app_no_register"
                                        android:textColor="@android:color/black"
                                        android:textSize="@dimen/detail_size_text_content"
                                        android:textStyle="bold"
                                        tools:text="Lorem Ipsum." />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <!--RELEASE DATE-->
                                    <TextView
                                        android:id="@+id/text_label_release_date"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/detail_margin_between_texts"
                                        android:text="@string/app_release_date"
                                        android:textSize="@dimen/detail_size_text_titles" />

                                    <TextView
                                        android:id="@+id/text_content_release_date"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/app_no_register"
                                        android:textColor="@android:color/black"
                                        android:textSize="@dimen/detail_size_text_content"
                                        android:textStyle="bold"
                                        tools:text="Lorem Ipsum." />
                                </LinearLayout>
                            </LinearLayout>

                            <!--OVERVIEW-->
                            <TextView
                                android:id="@+id/text_label_overview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/detail_margin_between_texts"
                                android:text="@string/app_overview"
                                android:textSize="@dimen/detail_size_text_titles" />

                            <TextView
                                android:id="@+id/text_content_overview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_no_register"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/detail_size_text_content"
                                tools:text="Lorem Ipsum." />

                            <!--VIDEOS-->
                            <TextView
                                android:id="@+id/text_label_videos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/detail_margin_between_texts"
                                android:text="@string/app_videos"
                                android:textSize="@dimen/detail_size_text_titles" />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recycler_view_videos"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/detail_margin_between_texts" />

                            <!--REVIEWS-->
                            <TextView
                                android:id="@+id/text_label_reviews"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/detail_margin_between_texts"
                                android:text="@string/app_reviews"
                                android:textSize="@dimen/detail_size_text_titles" />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recycler_view_reviews"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/detail_margin_between_texts" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />
</RelativeLayout>
